--- a/frontend/src/page.css
+++ b/frontend/src/page.css
@@ -16,22 +16,26 @@
 	background-color: #555;
 }
 
+.search-line{
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.op-container{
+    display: flex;
+}
+
 @media (max-width: 768px) {
     body {
         font-size: 14px;
     }
 
-    .background-image{
-        width: 100%;
-    }
+.result-info{
 
-.result-box{
-    justify-content: center;
-    align-items: center;
 }
 
 .result-info p{
-    justify-content: center;
+    justify-content: start;
     width: 100%;
 }
 
@@ -80,7 +84,7 @@
           }
         
           .filter-group input {
-            width: 350px; /* Input takes full width of the container */
+            width: 200px; /* Input takes full width of the container */
           }
         
           .date-filters .sort-button {
@@ -132,14 +136,15 @@
     }
 
     .header-end {
-        margin-right: 0;
-        margin-top: 10px;
-        text-align: center;
+        justify-content: center;
+        width: inherit;
+        font-size: clamp(10px); 
+        margin:2em 0; 
     }
 
     .header-end button {
         width: 100%;
-        margin: 0.5rem 0;
+
     }
 
     .login-form {
@@ -172,8 +177,8 @@
     }
 
     .search-box {
-        margin: 1rem;
-        padding: 1rem;
+        margin: 1px;
+        padding: 1px;
     }
 
     .search-bar {
@@ -185,8 +190,9 @@
     .results,
     .result-box {
         font-size: 12px;
-        padding: 10px;
-        margin: 10px;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 1em;
     }
 
     footer {
@@ -194,11 +200,11 @@
     }
 
     .footer-container {
-        padding: 1rem;
+        padding: 1px;
     }
 
     .footer-container div {
-        padding: 1rem;
+        padding: 0px;
     }
 }
 
@@ -283,15 +289,17 @@ body{
 }
 
 .background-image{
+    width: 100vw;
     position: absolute;
-    top: 0;
-    left: 0;
     min-height: 100vh; /* Ensures height covers the viewport */
     z-index: -1;
-    background: url('your-image.jpg') no-repeat center center;
+    background-image: url('bg.jpg') no-repeat center center;
     background-size: cover;
     filter: blur(15px) contrast(1.5) brightness(1);
-    transform: scale(1.1);
+}
+
+.background-image img{
+    width: 100%;
 }
 
 .about-container{
@@ -680,12 +688,11 @@ height: 3rem;
 }
 
 .search-box{
-    width: auto;
     border-radius: 10px;
-    margin: 2rem 1rem;
+    margin: 2em 1em;
     background-color: #0b2774;
     color:white;
-    padding: 2rem;
+    padding: 2em;
 }
 
 .search-box i{
@@ -734,7 +741,7 @@ height: 3rem;
     border-radius: 5px;
     transition: 0.1s;
     outline:none;
-    width:30rem;
+    width:70%;
     height: 50px;
     font-size: 18px;
     margin-bottom: 1rem;
@@ -772,7 +779,6 @@ height: 3rem;
     font-size: 14px;
     border-radius: 5px;
     margin:10px;
-    padding:15px;
     margin-top:2rem;
 }
 
@@ -781,8 +787,8 @@ height: 3rem;
     display: flex;
     flex-flow: wrap;
     color:white;
-    margin:15px;
-    padding:25px 40px;
+    margin:20px 5px;
+    padding:3em;
     background:#143693;
     border-radius: 15px;
     transition:150ms ease transform;
@@ -846,7 +852,8 @@ footer{
     display: flex;
     border:1px dashed white;
     border-radius: 2px;
-    padding: 2rem;
+    padding: 1em;
+    flex-wrap: wrap;
     flex-flow:column;
     margin-bottom: 2rem;
 }
