--- a/frontend/src/page.css
+++ b/frontend/src/page.css
@@ -74,7 +74,7 @@
         width: 100%;
         height: 50vh;
         z-index: -1;
-        position: absolute;
+        position: fixed;
         filter:brightness(.4) contrast(1.25);
         background-image:url('image/bg5.jpg');
         background-repeat: no-repeat;
